--- a/package.json
+++ b/package.json
@@ -5,27 +5,34 @@
     "start": "gulp"
   },
   "devDependencies": {
+    "body-parser": "^1.12.3",
+    "browser-sync": "~2.6.4",
+    "connect-modrewrite": "^0.7.9",
+    "express": "^4.12.3",
+    "front-matter": "^0.2.0",
+    "front-router": "^1.0.0",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-concat": "^2.4.2",
+    "gulp-connect": "^2.2.0",
     "gulp-front-matter": "^1.0.0",
+    "gulp-if": "~1.2.5",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-ng-html2js": "~0.2.0",
+    "gulp-nodemon": "~2.0.2",
+    "gulp-ruby-sass": "~1.0.1",
+    "gulp-sass": "~1.3.3",
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.1",
-    "gulp-ruby-sass": "~1.0.1",
-    "gulp-connect": "^2.2.0",
-    "front-matter": "^0.2.0",
-    "through2": "^0.6.3",
-    "connect-modrewrite": "^0.7.9",
-    "rimraf": "^2.2.8",
-    "run-sequence": "^1.0.2",
-    "gulp-ng-html2js": "~0.2.0",
-    "gulp-sass": "~1.3.3",
-    "gulp-if": "~1.2.5",
-    "browser-sync": "~2.6.4",
-    "webserver": "~1.1.2",
     "gulp-webserver": "~0.9.0",
     "method-override": "~2.3.2",
-    "gulp-nodemon": "~2.0.2"
+    "mongoose": "^4.0.2",
+    "morgan": "^1.5.2",
+    "rimraf": "^2.2.8",
+    "run-sequence": "^1.0.2",
+    "through2": "^0.6.3",
+    "webserver": "~1.1.2",
+    "yargs": "^3.8.0"
   },
   "private": true
 }
