--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,8 @@
     "foundation-apps": "~1.1.0"
   },
   "devDependencies": {
-    "angular-route": "~1.3.15"
+    "angular-route": "~1.3.15",
+    "animate.css": "~3.2.6",
+    "q": "~2.0.2"
   }
 }
