--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
     "method-override": "~2.3.2",
     "mongoose": "^4.0.2",
     "morgan": "^1.5.2",
+    "q": "^1.3.0",
     "rimraf": "^2.2.8",
     "run-sequence": "^1.0.2",
     "through2": "^0.6.3",
     "webserver": "~1.1.2",
     "yargs": "^3.8.0"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "es6-module-loader": "^0.16.6"
+  }
 }
