--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "tests"
   ],
   "dependencies": {
-    "foundation-apps": "~1.1.0"
+    "foundation-apps": "~1.1.0",
+    "rsvp": "~3.0.18"
   },
   "devDependencies": {
     "angular-route": "~1.3.15",
