--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rimraf": "^2.2.8",
     "run-sequence": "^1.0.2",
     "through2": "^0.6.3",
+    "traceur": "0.0.89",
     "webserver": "~1.1.2",
     "yargs": "^3.8.0"
   },
