--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
   ],
   "dependencies": {
     "foundation-apps": "~1.1.0",
-    "rsvp": "~3.0.18"
+    "rsvp": "~3.0.18",
+    "angular-xeditable": "~0.1.9"
   },
   "devDependencies": {
     "angular-route": "~1.3.15",
