--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "front-router": "^1.0.0",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^1.0.1",
+    "gulp-compass": "^2.0.4",
     "gulp-concat": "^2.4.2",
     "gulp-connect": "^2.2.0",
     "gulp-front-matter": "^1.0.0",
