--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "private": true,
   "dependencies": {
+    "async": "^0.9.0",
     "es6-module-loader": "^0.16.6",
     "mongoose-createdmodified": "0.0.2"
   }
