--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "foundation-apps": "~1.1.0",
     "rsvp": "~3.0.18",
-    "angular-xeditable": "~0.1.9"
+    "angular-xeditable": "~0.1.9",
+    "angular-vs-repeat": "~1.0.0-rc7"
   },
   "devDependencies": {
     "angular-route": "~1.3.15",
