--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "foundation-apps": "~1.1.0",
     "rsvp": "~3.0.18",
     "angular-xeditable": "~0.1.9",
-    "angular-vs-repeat": "~1.0.0-rc7"
+    "angular-vs-repeat": "~1.0.0-rc7",
+    "esrever": "~0.2.0"
   },
   "devDependencies": {
     "angular-route": "~1.3.15",
