--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "gulp-concat": "^2.4.2",
     "gulp-connect": "^2.2.0",
     "gulp-front-matter": "^1.0.0",
+    "gulp-iconfont": "^2.0.0",
+    "gulp-iconfont-css": "0.0.9",
     "gulp-if": "~1.2.5",
     "gulp-load-plugins": "^0.10.0",
     "gulp-ng-html2js": "~0.2.0",
