--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "gulp-util": "^3.0.1",
     "gulp-webserver": "~0.9.0",
     "method-override": "~2.3.2",
-    "mongoose": "^4.0.2",
     "morgan": "^1.5.2",
     "q": "^1.3.0",
     "rimraf": "^2.2.8",
@@ -43,6 +42,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "es6-module-loader": "^0.16.6",
-    "mongoose-createdmodified": "0.0.2"
+    "mongoose-createdmodified": "0.0.2",
+    "mongoose": "^4.0.2"
   }
 }
