--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
   "dependencies": {
     "async": "^0.9.0",
     "es6-module-loader": "^0.16.6",
+    "mongoose": "^4.0.2",
     "mongoose-createdmodified": "0.0.2",
-    "mongoose": "^4.0.2"
+    "underscore": "^1.8.3"
   }
 }
