--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,9 @@
     "rsvp": "~3.0.18",
     "angular-xeditable": "~0.1.9",
     "angular-vs-repeat": "~1.0.0-rc7",
-    "esrever": "~0.2.0"
+    "esrever": "~0.2.0",
+    "angular-route-segment": "~1.5.0",
+    "angular-resource": "~1.4.1"
   },
   "devDependencies": {
     "angular-route": "~1.3.15",
