--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,11 @@
     "angular-vs-repeat": "~1.0.0-rc7",
     "esrever": "~0.2.0",
     "angular-route-segment": "~1.5.0",
-    "angular-resource": "~1.4.1"
+    "angular-resource": "~1.4.1",
+    "angular-masonry-directive": "*",
+    "jquery": "~2.1.4",
+    "angular-masonry": "~0.11.1",
+    "angular-isotope": "~0.1.14"
   },
   "devDependencies": {
     "angular-route": "~1.3.15",
