--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,11 @@
     "jquery": "~2.1.4",
     "angular-masonry": "~0.11.1",
     "angular-isotope": "~0.1.14",
-    "angular-scroll-watch": "~0.5.4"
+    "angular-scroll-watch": "~0.5.4",
+    "angulargrid": "~0.1.2",
+    "angular-underscore": "~0.5.0",
+    "underscore": "~1.8.3",
+    "angular-remove-diacritics": "~0.0.1"
   },
   "devDependencies": {
     "angular-route": "~1.3.15",
