--- a/bower.json
+++ b/bower.json
@@ -38,11 +38,16 @@
     "angulargrid": "~0.1.2",
     "angular-underscore": "~0.5.0",
     "underscore": "~1.8.3",
-    "angular-remove-diacritics": "~0.0.1"
+    "angular-remove-diacritics": "~0.0.1",
+    "famous-angular": "~0.5.2",
+    "angular-optimistic-cache": "~1.0.3"
   },
   "devDependencies": {
     "angular-route": "~1.3.15",
     "animate.css": "~3.2.6",
     "q": "~2.0.2"
+  },
+  "resolutions": {
+    "angular": "1.4.1"
   }
 }
