--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "devDependencies": {
     "body-parser": "^1.12.3",
     "browser-sync": "^2.7.13",
+    "browserify": "^10.2.6",
     "connect-modrewrite": "^0.7.9",
     "express": "^4.12.3",
     "front-matter": "^0.2.0",
     "front-router": "^1.0.0",
+    "globby": "^2.1.0",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-compass": "^2.0.4",
@@ -24,22 +26,28 @@
     "gulp-ng-html2js": "~0.2.0",
     "gulp-nodemon": "~2.0.2",
     "gulp-sass": "~1.3.3",
-    "gulp-uglify": "^1.0.2",
-    "gulp-util": "^3.0.1",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6",
     "gulp-webserver": "~0.9.0",
     "method-override": "~2.3.2",
     "morgan": "^1.5.2",
     "q": "^1.3.0",
+    "reactify": "^1.1.1",
     "rimraf": "^2.2.8",
     "run-sequence": "^1.0.2",
-    "through2": "^0.6.3",
+    "through2": "^2.0.0",
     "traceur": "0.0.89",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "vinyl-transform": "^1.0.0",
     "webserver": "~1.1.2",
     "yargs": "^3.8.0"
   },
   "private": true,
   "dependencies": {
     "async": "^0.9.0",
+    "collections": "^1.2.3",
     "es6-module-loader": "^0.16.6",
     "mongoose": "^4.0.2",
     "mongoose-createdmodified": "0.0.2",
