--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,7 @@
     "angular-vs-repeat": "~1.0.0-rc7",
     "esrever": "~0.2.0",
     "angular-route-segment": "~1.5.0",
-    "angular-resource": "~1.4.1",
+    "angular-resource": "~1.4.3",
     "angular-masonry-directive": "*",
     "jquery": "~2.1.4",
     "angular-masonry": "~0.11.1",
@@ -40,14 +40,12 @@
     "underscore": "~1.8.3",
     "angular-remove-diacritics": "~0.0.1",
     "famous-angular": "~0.5.2",
-    "angular-optimistic-cache": "~1.0.3"
-  },
-  "devDependencies": {
-    "angular-route": "~1.3.15",
+    "angular-optimistic-cache": "~1.0.3",
+    "angular-route": "~1.4.3",
     "animate.css": "~3.2.6",
     "q": "~2.0.2"
   },
   "resolutions": {
-    "angular": "1.4.1"
+    "angular": "~1.4.3"
   }
 }
