--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "gulp"
   },
   "devDependencies": {
+    "babelify": "^6.1.3",
     "body-parser": "^1.12.3",
     "browser-sync": "^2.7.13",
     "browserify": "^10.2.6",
@@ -15,6 +16,7 @@
     "globby": "^2.1.0",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^1.0.1",
+    "gulp-babel": "^5.1.0",
     "gulp-compass": "^2.0.4",
     "gulp-concat": "^2.4.2",
     "gulp-connect": "^2.2.0",
@@ -41,6 +43,7 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vinyl-transform": "^1.0.0",
+    "watchify": "^3.3.0",
     "webserver": "~1.1.2",
     "yargs": "^3.8.0"
   },
