starts refactoring backend

--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
   },
   "private": true,
   "dependencies": {
+    "app-module-path": "^1.0.3",
     "async": "^0.9.0",
     "collections": "^1.2.3",
     "es6-module-loader": "^0.16.6",
+    "lodash": "^3.10.0",
     "mongoose": "^4.0.2",
     "mongoose-createdmodified": "0.0.2",
     "underscore": "^1.8.3"
