--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "gulp"
   },
   "devDependencies": {
+    "babel-core": "^5.8.20",
     "babelify": "^6.1.3",
     "body-parser": "^1.12.3",
     "browser-sync": "^2.7.13",
