--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
     ],
     "comma-dangle": [2, "always-multiline"],
     "no-console": 1,
+    "no-unused-vars": 1,
     "comma-spacing": [2, {
       "before": false,
       "after": true
