--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cycle-starter",
+  "name": "dft-manager",
   "version": "0.1.0",
   "description": "Simple setup for cycle.js",
   "main": "",
@@ -8,12 +8,12 @@
     "build-js": "webpack --progress --colors",
     "build": "npm run build-jade && npm run build-js",
     "watch-jade": "nodemon --watch ./src/index.jade --exec 'npm run build-jade'",
-    "watch-js": "webpack --progress --colors --watch",
+    "watch-js": "webpack --progress --watch",
     "watch": "npm run watch-jade & npm run watch-js",
-    "dev-server": "webpack-dev-server --content-base dist/dev/ --host 0.0.0.0 --inline --hot --progress --colors --watch",
+    "dev-server": "webpack-dev-server --content-base dist/dev/ --host 0.0.0.0 --inline --hot --progress --watch",
     "test-server": "webpack-dev-server --hot 'mocha!./test/' --output-filename test.js",
-    "build-prod": "webpack --config webpack.production.js -p --progress --colors",
-    "build-prod-server": "webpack --config webpack.server.js --progress --colors",
+    "build-prod": "webpack --config webpack.production.js -p --progress",
+    "build-prod-server": "webpack --config webpack.server.js --progress",
     "preprod-server": "npm run build-prod && npm run build-prod-server",
     "prod-server": "node ./dist/server.js",
     "server": "npm run prod-server",
@@ -21,7 +21,7 @@
     "test": "babel-node ./node_modules/.bin/painless src/**/*.test.js",
     "autotest": "supervisor -q -n exit -x npm run test"
   },
-  "author": "Tylor Steinberger",
+  "author": "Géraud Henrion",
   "license": "MIT",
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
@@ -34,7 +34,7 @@
     "babel-plugin-typecheck": "^1.3.0",
     "css-loader": "^0.19.0",
     "cssnext-loader": "^1.0.1",
-    "cyclejs-mock": "^0.1.1",
+    "cycle-restart": "0.0.14",
     "eslint": "^1.0.0",
     "eslint-config-cycle": "^3.0.0",
     "eslint-plugin-cycle": "^1.0.1",
@@ -46,23 +46,26 @@
     "painless": "^0.9.1",
     "postcss-loader": "^0.8.2",
     "style-loader": "^0.12.4",
-    "stylus-loader": "^1.3.1",
     "supervisor": "^0.9.1",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.0"
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "@cycle/core": "^4.x.x",
-    "@cycle/dom": "6.x.x",
-    "cycle-history": "^0.4.x",
-    "cycle-local-storage": "^1.2.x",
-    "express": "^4.13.3",
-    "gsap": "^1.18.0",
-    "hyperscript-helpers": "^2.0.0",
-    "ramda": "^0.19.1",
-    "rx": "^4.1.0",
-    "rx-combine-latest-obj": "^1.0.2",
-    "switch-path": "^1.1.0",
-    "virtual-dom": "^2.1.1"
+    "@cycle/core": "^6.0.3",
+    "@cycle/dom": "^9.4.0",
+    "@cycle/history": "^2.0.2",
+    "@cycle/http": "^8.2.2",
+    "@cycle/isolate": "^1.2.0",
+    "@cycle/storage": "^2.0.3",
+    "diacritics": "^1.2.3",
+    "express": "latest",
+    "history": "^2.1.0",
+    "lost": "latest",
+    "next-tick": "^0.2.2",
+    "ramda": "latest",
+    "rx-combine-latest-obj": "latest",
+    "rxjs": "^5.0.0-beta.6",
+    "stage": "^0.9.0",
+    "switch-path": "latest"
   }
 }
