--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,9 @@
     "modules": true
   },
   "extends": "eslint:recommended",
+  "plugins": [
+    "immutable"
+  ],
   "parser": "babel-eslint",
   "parserOptions": {
     "sourceType": "module"
@@ -34,6 +37,9 @@
     "comma-spacing": [2, {
       "before": false,
       "after": true
-    }]
+    }],
+    "immutable/no-let": 2,
+    "immutable/no-this": 2,
+    "immutable/no-mutation": 2
   }
 }
