--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "postcss-loader": "^0.8.2",
     "style-loader": "^0.12.4",
     "supervisor": "^0.9.1",
+    "svg-inline-loader": "^0.4.1",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   },
