--- a/package.json
+++ b/package.json
@@ -29,9 +29,8 @@
     "babel-core": "^5.8.25",
     "babel-eslint": "^4.1.8",
     "babel-loader": "^5.3.2",
-    "babel-plugin-closure-elimination": "0.0.2",
-    "babel-plugin-flow-comments": "^1.0.9",
-    "babel-plugin-typecheck": "^1.3.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-2": "^6.5.0",
     "css-loader": "^0.19.0",
     "cssnext-loader": "^1.0.1",
     "cycle-restart": "0.0.14",
@@ -45,7 +44,7 @@
     "jade": "^1.11.0",
     "mocha": "^2.4.5",
     "nodemon": "^1.7.1",
-    "painless": "^0.9.1",
+    "painless": "^0.9.4",
     "postcss-loader": "^0.8.2",
     "style-loader": "^0.12.4",
     "supervisor": "^0.9.1",
