--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
     "watch-js": "webpack --progress --watch",
     "watch": "npm run watch-jade & npm run watch-js",
     "dev-server": "webpack-dev-server --content-base dist/dev/ --host 0.0.0.0 --inline --hot --progress --watch",
-    "test-server": "webpack-dev-server --hot 'mocha!./test/' --output-filename test.js",
     "build-prod": "webpack --config webpack.production.js -p --progress",
     "build-prod-server": "webpack --config webpack.server.js --progress",
     "preprod-server": "npm run build-prod && npm run build-prod-server",
     "prod-server": "node ./dist/server.js",
     "server": "npm run prod-server",
-    "start": "npm run watch-jade & npm run dev-server",
+    "start": "npm run dev-server",
     "test": "NODE_PATH=./src && babel-node ./node_modules/.bin/painless src/{**,**/**}/*.test.js",
     "autotest": "supervisor -q -n exit -x npm run test"
   },
@@ -25,10 +24,9 @@
   "license": "MIT",
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
-    "babel": "^5.8.23",
-    "babel-core": "^5.8.25",
-    "babel-eslint": "^4.1.8",
-    "babel-loader": "^5.3.2",
+    "babel-cli": "^6.9.0",
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-2": "^6.5.0",
     "css-loader": "^0.19.0",
@@ -43,13 +41,13 @@
     "image-webpack-loader": "^1.8.0",
     "jade": "^1.11.0",
     "mocha": "^2.4.5",
-    "nodemon": "^1.7.1",
+    "nodemon": "^1.9.2",
     "painless": "^0.9.4",
     "postcss-loader": "^0.8.2",
     "style-loader": "^0.12.4",
     "supervisor": "^0.9.1",
     "svg-inline-loader": "^0.4.1",
-    "webpack": "^1.13.0",
+    "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
@@ -59,6 +57,7 @@
     "@cycle/http": "^8.2.2",
     "@cycle/isolate": "^1.2.0",
     "@cycle/storage": "^2.0.3",
+    "cssrecipes-defaults": "^0.5.0",
     "diacritics": "^1.2.3",
     "express": "latest",
     "history": "^2.1.0",
@@ -68,6 +67,7 @@
     "rx-combine-latest-obj": "latest",
     "rxjs": "^5.0.0-beta.6",
     "stage": "^0.9.0",
+    "stanga": "^2.0.0",
     "switch-path": "latest"
   }
 }
