--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "rxjs": "^5.0.0-beta.6",
     "stage": "^0.9.0",
     "stanga": "^2.0.0",
-    "switch-path": "latest"
+    "switch-path": "latest",
+    "thenby": "^1.2.1"
   }
 }
