allow the use of aliases in test environment

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prod-server": "node ./dist/server.js",
     "server": "npm run prod-server",
     "start": "npm run watch-jade & npm run dev-server",
-    "test": "NODE_PATH=./src && babel-node ./node_modules/.bin/painless src/{**,**/**,**/**/**}/*.test.js",
+    "test": "NODE_PATH=./src && NODE_ENV=test && babel-node ./node_modules/.bin/painless src/{**,**/**,**/**/**}/*.test.js",
     "autotest": "supervisor -q -n exit -x npm run test"
   },
   "author": "Géraud Henrion",
