--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,8 @@
   "presets": [
     "es2015",
     "stage-2"
+  ],
+  "plugins": [
+    [ "babel-plugin-webpack-alias", { "config": "./webpack.config.js" } ]
   ]
 }
