--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
+    "babel-plugin-webpack-alias": "^1.3.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-2": "^6.5.0",
     "css-loader": "^0.19.0",
@@ -62,7 +63,7 @@
     "immutable": "^3.8.1",
     "lost": "latest",
     "next-tick": "^0.2.2",
-    "ramda": "latest",
+    "ramda": "^0.21.0",
     "rx-combine-latest-obj": "latest",
     "rxjs": "^5.0.0-beta.6",
     "stage": "^0.9.0",
