add proxy to server.js from webpackdevserver

--- a/package.json
+++ b/package.json
@@ -4,17 +4,11 @@
   "description": "Simple setup for cycle.js",
   "main": "",
   "scripts": {
-    "build-jade": "jade ./src/index.jade -o ./dist/dev/",
-    "build-js": "webpack --progress --colors",
-    "build": "npm run build-jade && npm run build-js",
+    "server": "babel-node ./server.js",
+    "start": "npm run watch-jade & npm run server & npm run dev-server",
     "watch-jade": "nodemon --watch ./src/index.jade --exec 'npm run build-jade'",
+    "build-jade": "jade ./src/index.jade -o ./dist/dev/",
     "dev-server": "webpack-dev-server --content-base dist/dev/ --host 0.0.0.0 --inline --hot --progress --watch",
-    "build-prod": "webpack --config webpack.production.js -p --progress",
-    "build-prod-server": "webpack --config webpack.server.js --progress",
-    "preprod-server": "npm run build-prod && npm run build-prod-server",
-    "prod-server": "node ./dist/server.js",
-    "server": "npm run prod-server",
-    "start": "npm run watch-jade & npm run dev-server",
     "test": "NODE_PATH=./src && NODE_ENV=test && babel-node ./node_modules/.bin/painless src/{**,**/**,**/**/**}/*.test.js",
     "autotest": "supervisor -q -n exit -x npm run test"
   },
@@ -43,6 +37,7 @@
     "nodemon": "^1.9.2",
     "painless": "^0.9.4",
     "postcss-loader": "^0.8.2",
+    "proxy-middleware": "^0.15.0",
     "style-loader": "^0.12.4",
     "supervisor": "^0.9.1",
     "svg-inline-loader": "^0.4.1",
@@ -61,10 +56,9 @@
     "express": "latest",
     "history": "^2.1.0",
     "immutable": "^3.8.1",
-    "lost": "latest",
+    "lost": "^6.8.1",
     "next-tick": "^0.2.2",
     "ramda": "^0.21.0",
-    "rx-combine-latest-obj": "latest",
     "rxjs": "^5.0.0-beta.6",
     "slugify": "^0.1.1",
     "stage": "^0.9.0",
