Serve json database from the server

--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "",
   "scripts": {
     "server": "babel-node ./server.js",
-    "start": "npm run watch-jade & npm run server & npm run dev-server",
+    "watch-server": "nodemon --exec npm run server",
+    "start": "npm run watch-jade & npm run dev-server",
     "watch-jade": "nodemon --watch ./src/index.jade --exec 'npm run build-jade'",
     "build-jade": "jade ./src/index.jade -o ./dist/dev/",
     "dev-server": "webpack-dev-server --content-base dist/dev/ --host 0.0.0.0 --inline --hot --progress --watch",
-    "test": "NODE_PATH=./src && NODE_ENV=test && babel-node ./node_modules/.bin/painless src/{**,**/**,**/**/**}/*.test.js",
+    "test": "NODE_PATH=./src && NODE_ENV=test && babel-node ./node_modules/.bin/painless ./{**,**/**,**/**/**,**/**/**/**}/*.test.js",
     "autotest": "supervisor -q -n exit -x npm run test"
   },
   "author": "Géraud Henrion",
@@ -51,9 +52,11 @@
     "@cycle/isolate": "^1.2.0",
     "@cycle/rx-run": "^7.0.0",
     "@cycle/storage": "^2.0.3",
+    "JSONStream": "^1.1.2",
     "cssrecipes-defaults": "^0.5.0",
     "diacritics": "^1.2.3",
     "express": "latest",
+    "fs-promise": "^0.5.0",
     "history": "^2.1.0",
     "immutable": "^3.8.1",
     "lost": "^6.8.1",
