--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple setup for cycle.js",
   "main": "",
   "scripts": {
-    "server": "nodemon --exec babel-node ./server.js",
+    "server": "nodemon --ignore static/ --exec babel-node ./server.js",
     "start": "npm run watch-jade & npm run dev-server",
     "watch-jade": "nodemon --watch ./src/index.jade --exec 'npm run build-jade'",
     "build-jade": "jade ./src/index.jade -o ./dist/dev/",
