--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "watch-jade": "nodemon --watch ./src/index.jade --exec 'npm run build-jade'",
     "build-jade": "jade ./src/index.jade -o ./dist/dev/",
     "dev-server": "webpack-dev-server --content-base dist/dev/ --host 0.0.0.0 --inline --hot --progress --watch",
-    "test": "NODE_PATH=./src && NODE_ENV=test && babel-node ./node_modules/.bin/painless ./{**,**/**,**/**/**,**/**/**/**}/*.test.js",
-    "autotest": "supervisor -q -n exit -x npm run test"
+    "test": "babel-node ./node_modules/.bin/painless ./src/{**,**/**,**/**/**,**/**/**/**}/*.test.js",
+    "autotest": "supervisor -q -n exit -x npm run test",
+    "jasmine": "./node_modules/.bin/jasmine"
   },
   "author": "Géraud Henrion",
   "license": "MIT",
@@ -18,6 +19,7 @@
     "autoprefixer-loader": "^3.1.0",
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.1",
+    "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-webpack-alias": "^1.3.1",
     "babel-preset-es2015": "^6.9.0",
@@ -33,9 +35,8 @@
     "extract-text-webpack-plugin": "^0.8.2",
     "image-webpack-loader": "^1.8.0",
     "jade": "^1.11.0",
-    "mocha": "^2.4.5",
     "nodemon": "^1.9.2",
-    "painless": "^0.9.4",
+    "painless": "^0.9.5",
     "postcss-loader": "^0.8.2",
     "proxy-middleware": "^0.15.0",
     "style-loader": "^0.12.4",
