replace the file based db by a naive usage of redis to store the app state

--- a/package.json
+++ b/package.json
@@ -56,18 +56,20 @@
     "cycle-keys": "^0.3.0",
     "diacritics": "^1.2.3",
     "express": "latest",
-    "fs-promise": "^0.5.0",
     "history": "^2.1.0",
     "immutable": "^3.8.1",
     "lost": "^6.8.1",
     "next-tick": "^0.2.2",
     "ramda": "^0.21.0",
+    "redis": "^2.6.2",
+    "redis-commands": "^1.2.0",
     "rxjs": "^5.0.0-beta.6",
     "slugify": "^0.1.1",
     "socket.io": "^1.4.8",
     "stage": "^0.9.0",
     "stanga": "^2.0.0",
     "switch-path": "latest",
+    "then-redis": "^2.0.1",
     "thenby": "^1.2.1",
     "xstream": "^5.0.6"
   }
