config for heroku

--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "dft-manager",
   "version": "0.1.0",
   "description": "Dofus trophy manager (this name sucks)",
-  "main": "",
+  "engines": {
+    "node": "5.3.0"
+  },
   "scripts": {
-    "start": "npm run watch-jade & npm run dev-server",
-    "watch-jade": "nodemon --watch ./src/index.jade --exec 'npm run build-jade'",
-    "build-jade": "jade ./src/index.jade -o ./dist/dev/",
-    "dev-server": "webpack-dev-server --content-base dist/dev/ --host 0.0.0.0 --inline --hot --progress --watch",
-    "server": "NODE_PATH=./src nodemon --ignore static/ --ignore dist/ --ignore src/components/ --exec babel-node ./src/server.js",
-    "autotest": "supervisor -q -n exit -x npm run test",
-    "test": "babel-node ./node_modules/.bin/painless ./src/{**,**/**,**/**/**,**/**/**/**}/*.test.js"
+    "start": "nf start",
+    "start:prod": "npm run jade:build & npm run webpack:prod & npm run server:prod",
+    "start:dev": "npm run jade:build  & npm run webpack:dev & npm run server:dev",
+    "test": "babel-node ./node_modules/.bin/painless ./src/{**,**/**,**/**/**,**/**/**/**}/*.test.js",
+    "test:watch": "supervisor -q -n exit -x npm run test",
+    "jade:build": "jade ./src/index.jade -o ./dist/dev/",
+    "webpack:dev": "webpack-dev-server --config ./webpack.dev.js --content-base dist/dev/ --host 0.0.0.0 --inline --hot --progress --watch",
+    "webpack:prod": "webpack --config -p ./webpack.prod.js",
+    "server:prod": "ENVIRONMENT=production NODE_PATH=./src babel-node ./src/server.js",
+    "server:dev": "ENVIRONMENT=development NODE_PATH=./src nodemon --ignore static/ --ignore dist/ --ignore src/components/ --exec babel-node ./src/server.js"
   },
   "author": "Géraud Henrion",
   "license": "MIT",
@@ -32,6 +37,7 @@
     "eslint-plugin-immutable": "^1.0.0",
     "eslint-plugin-no-class": "^0.1.0",
     "extract-text-webpack-plugin": "^0.8.2",
+    "fs-promise": "^0.5.0",
     "image-webpack-loader": "^1.8.0",
     "jade": "^1.11.0",
     "nodemon": "^1.9.2",
@@ -56,6 +62,7 @@
     "cycle-keys": "^0.3.0",
     "diacritics": "^1.2.3",
     "express": "latest",
+    "foreman": "1.4.1",
     "history": "^2.1.0",
     "immutable": "^3.8.1",
     "lost": "^6.8.1",
