--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,6 @@
     "stage-2"
   ],
   "plugins": [
-    [ "babel-plugin-webpack-alias", { "config": "./webpack.config.js" } ]
+    [ "babel-plugin-webpack-alias", { "config": "./webpack.shared.js" } ]
   ]
 }
