--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "start:dev": "npm run jade:build  & npm run webpack:dev & npm run server:dev",
     "test": "babel-node node_modules/.bin/painless src/{**,**/**,**/**/**,**/**/**/**}/*.test.js",
     "test:watch": "supervisor -q -n exit -x npm run test",
-    "jade:build": "jade src/index.jade -o dist/dev/",
-    "webpack:dev": "webpack-dev-server --config webpack.dev.js --content-base dist/dev/ --host 0.0.0.0 --inline --hot --progress --watch",
-    "webpack:prod": "webpack --config -p webpack.prod.js",
+    "jade:build": "jade src/index.jade -o dist/",
+    "webpack:dev": "webpack-dev-server --config webpack.dev.js --content-base dist/ --host 0.0.0.0 --inline --hot --progress --watch",
+    "webpack:prod": "webpack --config webpack.prod.js -p",
     "server:prod": "ENVIRONMENT=production NODE_PATH=src babel-node src/server.js",
     "server:dev": "ENVIRONMENT=development NODE_PATH=src nodemon --ignore storage/ --ignore dist/ --ignore src/components/ --exec babel-node src/server.js"
   },
