add missing dependency

--- a/package.json
+++ b/package.json
@@ -34,6 +34,12 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "@cycle/dom": "^10.0.2",
+    "@cycle/history": "^2.0.2",
+    "@cycle/http": "^9.0.2",
+    "@cycle/isolate": "^1.4.0",
+    "@cycle/rx-run": "^7.0.0",
+    "@cycle/storage": "^2.0.3",
     "autoprefixer-loader": "^3.1.0",
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.1",
@@ -43,30 +49,21 @@
     "babel-preset-stage-2": "^6.5.0",
     "css-loader": "^0.19.0",
     "cssnext-loader": "^1.0.1",
-    "extract-text-webpack-plugin": "^0.8.2",
-    "fs-promise": "^0.5.0",
-    "image-webpack-loader": "^1.8.0",
-    "jade": "^1.11.0",
-    "postcss-loader": "^0.8.2",
-    "style-loader": "^0.12.4",
-    "webpack": "^1.13.1",
-    "svg-inline-loader": "^0.4.1",
-    "@cycle/dom": "^10.0.2",
-    "@cycle/history": "^2.0.2",
-    "@cycle/http": "^9.0.2",
-    "@cycle/isolate": "^1.4.0",
-    "@cycle/rx-run": "^7.0.0",
-    "@cycle/storage": "^2.0.3",
-    "JSONStream": "^1.1.2",
     "cssrecipes-defaults": "^0.5.0",
     "cycle-keys": "^0.3.0",
     "diacritics": "^1.2.3",
     "express": "latest",
+    "extract-text-webpack-plugin": "^0.8.2",
     "foreman": "1.4.1",
+    "fs-promise": "^0.5.0",
     "history": "^2.1.0",
+    "image-webpack-loader": "^1.8.0",
     "immutable": "^3.8.1",
+    "jade": "^1.11.0",
     "lost": "^6.8.1",
     "next-tick": "^0.2.2",
+    "postcss-cssnext": "2.7.0",
+    "postcss-loader": "^0.8.2",
     "ramda": "^0.21.0",
     "redis": "^2.6.2",
     "redis-commands": "^1.2.0",
@@ -75,9 +72,12 @@
     "socket.io": "^1.4.8",
     "stage": "^0.9.0",
     "stanga": "^2.0.0",
+    "style-loader": "^0.12.4",
+    "svg-inline-loader": "^0.4.1",
     "switch-path": "latest",
     "then-redis": "^2.0.1",
     "thenby": "^1.2.1",
+    "webpack": "^1.13.1",
     "xstream": "^5.0.6"
   }
 }
