prevent from quitting edit mode on window blur

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "webpack:dev": "webpack-dev-server --config webpack.dev.js --content-base dist/ --host 0.0.0.0 --inline --hot --progress --watch",
     "webpack:prod": "webpack --config webpack.prod.js -p",
     "server:prod": "ENVIRONMENT=production NODE_PATH=src babel-node src/server.js",
-    "server:dev": "ENVIRONMENT=development NODE_PATH=src nodemon --ignore storage/ --ignore dist/ --ignore src/components/ --exec babel-node src/server.js"
+    "server:dev": "ENVIRONMENT=development NODE_PATH=src nodemon --ignore storage/ --ignore dist/ --ignore src/components/ --ignore src/pages/ --exec babel-node src/server.js"
   },
   "author": "Géraud Henrion",
   "license": "MIT",
